--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
 
         <center class="py_50 px_60 bg_golden color_white">
-            <h3 class="font_charm">Ereida, solicita su presencia en la celebración de su Aniversario</h3>
+            <h3 class="font_charm">Ereida, solicita su presencia en la celebración de su Aniversario #50</h3>
         </center>
 
         <img src="img2.jpg " class="w_100"  />
@@ -196,12 +196,12 @@
                 </div>
             </div>
     
-            <div class="m_0a d_block max_wpx_500 color_black box_shadow_dark">
+            <!--<div class="m_0a d_block max_wpx_500 color_black box_shadow_dark">
                 <div class="p_50 bg_golden color_white">
                     <h3 class="font_paris fspx_30 m_0">Color Reservado</h3>
                     <h3 class="font_times fspx_20 m_0">El color dorado estará reservado para Ereida.</h3>
                 </div>
-            </div>
+            </div>-->
         </center>
 
 
